--- a/Assets/com.fluid.stats/package.json
+++ b/Assets/com.fluid.stats/package.json
@@ -5,6 +5,6 @@
   "description": "Character stat management tool for visual stat editing with modifier support.",
   "unity": "2019.1",
   "dependencies": {
-    "com.fluid.adnc-utilities": "^1.0.0"
+    "com.fluid.adnc-utilities": "1.0.0"
   }
 }
