--- a/.editorconfig
+++ b/.editorconfig
@@ -12,5 +12,5 @@ trim_trailing_whitespace = true
 max_line_length = off
 trim_trailing_whitespace = false
 
-[*.json]
+[manifest.json]
 indent_size = 2
