--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -5,13 +5,13 @@ on:
             - develop
 jobs:
     deployNightly:
-        runs-on: ubuntu-16.04
+        runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
-            - uses: actions/setup-node@v2
+            - uses: actions/checkout@v3
+            - uses: actions/setup-node@v3
               with:
-                  node-version: '14'
-            - run: npm install
+                  node-version: 16
+            - run: HUSKY=0 npm ci
             - run: npm run build
             - name: Deploy nightly branch
               run: sh ./publish-nightly.sh
